add solution from JavaCore task 1233