@@ -5,8 +5,6 @@ package com.javarush.task.task12.task1233;
 */
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
-
 
 public class Solution {
     public static void main(String[] args) throws Exception {
@@ -24,7 +22,7 @@ public class Solution {
         }
 
         Integer min = Arrays.stream(array).min().getAsInt();
-        Integer index = Arrays.stream(array).boxed().collect(Collectors.toList()).indexOf(min);
+        Integer index = Arrays.stream(array).boxed().toList().indexOf(min);
 
         return new Pair<Integer, Integer>(min, index);
     }
